--- a/styles.css
+++ b/styles.css
@@ -86,11 +86,13 @@ h3 {
     margin-top: 10vh;
 }
 
-.conocenos-container {
+.conocenos {
     background-image: url(./IMAGENES/Central/imagenCentral.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+.conocenos-container {
     color: var(--very-light-brown);
     padding: 14rem 1rem
      2rem;
@@ -114,6 +116,10 @@ h3 {
     border-radius: 50px;
     display: block;
     margin: 2rem auto 1rem;
+}
+
+.ddlt-img, .ddlsa-img, .dcn-img, .adm-img {
+    display: none;
 }
 
 .productos h2 {
@@ -347,4 +353,203 @@ footer h2 {
 .map-footer {
     width: 100%;
     padding: 1rem;
+}
+
+@media screen and (min-width:768px) {
+    .conocenos-container {
+        margin-left: 50%;
+    }
+    .btn-conocenos {
+        display: block;
+        margin: 2rem auto 0;
+    }
+    .ddl, .ddlsa, .dcn, .adm {
+        width: 60%;
+        margin: auto;
+    }
+    .calidad-img-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .contactanos-p {
+        text-align: center;
+    }
+    .form {
+        width: 60%;
+        margin: auto;
+    }
+    .recetas-container {
+        background-color: black;
+    }
+    .conitos-container, .pepas-container, .torta-container {
+        width: 60%;
+        margin: auto;
+    }
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .logo-footer-container {
+        width: 100vw;
+    }
+    .footer-menu-container, .footer-navegacion-container, .footer-redes-container {
+        display: flex;
+        flex-direction: column;
+        width: 33.33%;
+    }
+    .footer-ubicacion-container{
+        width: 100%;
+    }
+}
+@media screen and (min-width:956px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100vw;
+    }
+    .navbar-li-container {
+        left: 0;
+        display: flex;
+        position: relative;
+        height: auto;
+        width: auto;
+    }
+    .navbar-li-container li a {
+        margin: 0 4vw;
+    }
+    #bar-btn {
+        display: none;
+    }
+    .conocenos-container{
+        padding: 24rem 0 10rem;
+    }
+    .conocenos-container h2 {
+        font-size: 8rem;
+        text-align: start;
+    }
+    .conocenos-container p {
+        font-size: 2.4rem;
+        line-height: 4rem;
+        text-shadow: black 8px 8px 6px;
+    }
+    .productos h2 {
+        font-size: 4rem;
+    }
+    .productos-h3 {
+        font-size: 3.2rem;
+    }
+    .productos-p, .adm-p {
+        font-size: 2rem;
+    }
+    .productos-p-bold, .adm-p-bold {
+        font-size: 2.4rem;
+    }
+    .ddlt-container, .ddlsa-container, .dcn-container {
+        padding: 0;
+        max-width: 100vw;
+        display: flex;
+        border-bottom: solid 3px var(--coral);
+    }
+    .ddlt, .ddlsa, .dcn {
+        background-color: black;
+        height: 100%;
+        padding: 2rem 2rem;
+    }
+    .ddlt-img, .ddlsa-img, .dcn-img {
+        display: block;
+        object-fit: cover;
+        width: 50%;
+    }
+    .adm-container {
+        background-image: none;
+        background-color: var(--logo-color);
+        padding: 4rem;
+        display: flex;
+    }
+    .adm-img {
+        display: block;
+    }
+    .calidad {
+        padding: 6rem 0;
+    }
+    .calidad h2 {
+        font-size: 4rem;
+        margin-bottom: 2rem;
+    }
+    .calidad-p {
+        font-size: 2rem;
+        padding-top: 1.2rem;
+    }
+    .contactanos {
+        background-image: none;
+        padding: 0;
+    }
+    .contactanos h2 {
+        background-color: var(--dark-brown-2);
+        font-size: 4rem;
+        padding: 2rem;
+    }
+    .contactanos-container {
+        display: flex;
+    }
+    .contactanos-img {
+        width: 75%;
+        max-height: 50rem;
+        object-fit: cover;
+    }
+    .contactanos-form {
+        padding: 2.4rem 2.4rem 0;
+    }
+    .contactanos-p {
+        font-size: 2rem;
+        color: var(--dark-brown2);
+        text-shadow: none;
+        margin-bottom: 2rem;
+    }
+    .form {
+        width: 75%;
+    }
+    .form label {
+        font-size: 2rem;
+        color: var(--dark-brown);
+    }
+    .form input {
+        padding: 1rem;
+        border: none;
+    }
+    .form textarea {
+        padding: 1rem;
+        border: none;
+    }
+    .btn-enviar {
+        margin: 2rem auto 1rem;
+    }
+    .recetas h2 {
+        font-size: 4rem;
+    }
+    .recetas-container {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .conitos-container, .pepas-container, .torta-container {
+        width: 28%;
+        max-width: 43rem;
+        height: auto;
+        padding: 0 0 2rem;
+    }
+    .h3-recetas {
+        font-size: 3.4rem;
+    }
+    .p-recetas {
+        font-size: 2rem;
+        padding: 1.8rem;
+        height: 23rem;
+    }
+    .btn-preparacion {
+        display: block;
+        font-size: 1.6rem;
+    }
 }
