--- a/styles.css
+++ b/styles.css
@@ -365,6 +365,10 @@ footer h2 {
     padding: 1rem;
 }
 
+.conocenos, .productos, .calidad, .contactanos, .recetas {
+    max-width: 100vw;
+}
+
 @media screen and (min-width:768px) {
     .conocenos-container {
         margin-left: 50%;
